Making make translation endpoint a object
